kubernetes/30-folduka.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: folduka
  namespace: infrastructure
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: folduka
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: folduka
    spec:
      containers:
      - image: registry.io.imim.cloud/folduka:0.2.59
        #imagePullPolicy: Always
        name: folduka
        ports:
        - containerPort: 8080
        - containerPort: 1025
        resources: {}
        #securityContext:
        #  allowPrivilegeEscalation: false
        #  capabilities: {}
        #  privileged: false
        #  readOnlyRootFilesystem: false
        #  runAsNonRoot: false
        #stdin: true
        #terminationMessagePath: /dev/termination-log
        #terminationMessagePolicy: File
        #tty: true
        volumeMounts:
        - mountPath: /controlukadata
          name: fcontroluka
        - mountPath: /config
          name: foldukaconfig
        - mountPath: /users
          name: foldukausers
        - mountPath: /files
          name: foldukafiles2
        - mountPath: /pdfform
          name: fpdfform
        - name: tz-config
          mountPath: /etc/localtime
      dnsPolicy: "ClusterFirst"
      dnsConfig:
        nameservers:
          - 172.20.4.10
          - 172.20.4.18 
      hostAliases:
      - ip: "172.20.4.47"
        hostnames:
        - "folder.imim.es"
        - "folderintern.imim.es"
      - ip: "172.20.4.18"
        hostnames:
        - "aleph0.imim.es"
      - ip: "10.1.3.227"
        hostnames:
        - "psmps1.parcdesalutmar.int"
      imagePullSecrets:
      - name: registryioimimcloud
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: fcontroluka
        persistentVolumeClaim:
          claimName: fcontrolukadata
      - name: foldukaconfig
        persistentVolumeClaim:
          claimName: foldukaconfig
      - name: foldukausers
        persistentVolumeClaim:
          claimName: foldukausers
      - name: foldukafiles2
        persistentVolumeClaim:
          claimName: foldukafiles2
      - name: fpdfform
        persistentVolumeClaim:
          claimName: fpdfform
      - name: tz-config
        hostPath:	
          path: /usr/share/zoneinfo/Europe/Madrid
