kubernetes/30-onlyoffice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlyoffice
  namespace: folduka
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: onlyoffice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: onlyoffice
    spec:
      containers:
      - image: onlyoffice/documentserver 
        #imagePullPolicy: Always
        name: onlyoffice
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
