kubernetes/01-folduka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: folduka
  namespace: infrastructure
spec:
  selector:
    app: folduka
  ports:
  - name: web
    port: 80 
    targetPort: 8080
