kubernetes/01-onlyoffice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice
  namespace: folduka
spec:
  selector:
    app: onlyoffice
  ports:
  - name: web
    port: 80 
    targetPort: 80
